# fana_rust

./: .env  .gitignore  1  Cargo.toml  Dockerfile  PLANNING.md  \  compose.yaml  log4rs.yaml
memory/: context.json
src/: analyze.rs  api_auth.rs  api_routes.rs  azure_blob.rs  chat_completion.rs  claude_chat.rs  claude_vision.rs  content_fetcher.rs  context_manager.rs  embedding.rs  generate.rs  image_diffusion.rs  image_vision.rs  input_process.rs  interactive_mode.rs  llm_client.rs  logging_setup.rs  main.rs  mod.rs  openai_chat.rs  openai_client.rs  process_image.rs  process_text.rs  sb_chat_history.rs  sb_client.rs  session_manager.rs  socketio_event_handler.rs  socketio_instance.rs  stt.rs  system_prompt.rs  trigger_handler.rs  triggers.rs  triggers_check.rs  triggers_generate.rs  triggers_regenerate.rs  url_handler.rs
src/data/user_sessions/0086f7dd-cc37-482a-939c-540498da51b6/: context.json
src/data/user_sessions/0410a2e7-55cb-402f-8998-d1afac1fd05a/: context.json
src/data/user_sessions/100f8dce-ed46-42dc-acec-be35621aac17/: context.json
src/data/user_sessions/13a7303d-25f7-4c61-a4f8-8998f61ea05f/: context.json
src/data/user_sessions/15ec1599-3275-4c02-a233-97cb39629881/: context.json
src/data/user_sessions/16e9bfea-b170-4d9a-8492-5c596a6b35bf/: context.json
src/data/user_sessions/1a919690-1b11-41b6-b8d3-7eef7fe4dc3c/: context.json
src/data/user_sessions/1f116fc0-c5da-402f-a94b-ca305482c83f/: context.json
src/data/user_sessions/24868fad-c496-4e67-88ee-1039c4194454/: context.json
src/data/user_sessions/2723ff8d-f5a0-4990-8410-dbaf7c82d0b0/: context.json
src/data/user_sessions/28e8f86d-9cea-43d1-be19-2466b3abbd75/: context.json
src/mod_bak/: analyze.rs  api_auth.rs  api_key_validate.rs  api_routes.rs  azure_blob.rs  content_fetcher.rs  embedding.rs  llm_client.rs  mod.rs  process_text.rs  sb_chat_history.rs  stt.rs  tokenizer.bak  translate.rs  triggers_check.rs
src/mod_bak/last/: generate.rs  sb_client.rs  triggers_generate.rs
(+30 files in other folders)
